src/components/topbar/topbar.css
.topbar {
  width: 100%;
  height: 55px;
  background-color: white;
  grid-area: nav;
  box-shadow: 0 16px 15px 0 rgb(0 0 0 / 4%);

  /* position: sticky;
  top: 0; */
}

.topbarWrapper {
  height: 100%;
  padding: 0px 20px;
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.logo {
  font-weight: bold;
  font-size: 30px;
  color: darkblue;
  cursor: pointer;
}

.topLeft {
  display: flex;
  align-items: center;
}

.topRight{
    display: flex;
    align-items: center;
}

.topbarIconContainer {
  position: relative;
  cursor: pointer;
  margin-right: 10px;
  color: #555;
}

.topIconBadge{
    width: 15px;
    height: 15px;
    position: absolute;
    top: -5px;
    right: 0px;
    background-color: red;
    color: white;
    border-radius: 50%;
    display: flex;
    align-items: center;
    justify-content: center;
    font-size: 10px;
}

.topAvatar{
    width: 40px;
    height: 40px;
    border-radius: 50%;
    cursor: pointer;
}

.topbar__userName {
  font-size: 1.2rem;
  font-weight: 100;
  color: black;
}

